# colorbrew

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/colorbrew/: __init__.py  blending.py  color.py  colorblind.py  contrast.py  converters.py  css_output.py  exceptions.py  manipulation.py  material_colors.py  named_colors.py  naming.py  palettes.py  parsing.py  temperature.py  types.py
src/colorbrew/analysis/: __init__.py  colorblind.py  contrast.py  delta_e.py  naming.py  temperature.py
src/colorbrew/conversion/: __init__.py  converters.py  css_output.py  gamma.py  parsing.py
src/colorbrew/data/: __init__.py  tailwind_colors.py
src/colorbrew/transform/: __init__.py  blending.py  manipulation.py  palettes.py
tests/: conftest.py  test_blending.py  test_color.py  test_colorblind.py  test_contrast.py  test_converters.py  test_css_output.py  test_delta_e.py  test_manipulation.py  test_material_colors.py  test_naming.py  test_new_features.py  test_palettes.py  test_parsing.py  test_tailwind_colors.py  test_temperature.py
