[project]
name = "colorbrew"
version = "0.1.0"
description = "A lightweight, zero-dependency Python library for color manipulation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "zfoq" }]
keywords = ["color", "hex", "rgb", "hsl", "css", "palette", "accessibility", "wcag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/zfoq/colorbrew"
Repository = "https://github.com/zfoq/colorbrew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colorbrew"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "D",     # pydocstyle
    "RUF",   # ruff-specific rules
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
